@@ -98,6 +98,24 @@ removed.
 
 This was added in v0.2.0.
 
+## predicates
+
+```perl
+my @predicates = $class->predicates;
+```
+
+Returns a list of predicate methods for each value.
+
+A hash of predicates to values is roughly
+
+```perl
+use List::Util 1.56 'mesh';
+
+my %handlers = mesh [ $class->values ], [ $class->predicates ];
+```
+
+This was added in v0.2.1.
+
 # SEE ALSO
 
 [Class::Enum](https://metacpan.org/pod/Class::Enum)
