@@ -1,6 +1,9 @@
 Revision history for {{ $dist->name }}:
 
 {{$NEXT}}
+ [Enhancements]
+ - Add `predicates` method.
+
  [Documentation]
  - Fixed typo.
 
